# mcp-server

./: .env.example  Dockerfile  README.md  config.yaml  docker-compose.yaml  docker-entrypoint.sh  kill_ports.py  prompt.md  pyproject.toml  requirements.txt  run_server.py  server.py  start_server.sh  websocket_test.html
static/: app.js  app_stable.js  styles.css  styles_stable.css
templates/: index.html
