[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "agent-torch-mcp-server"
version = "0.1.0"
description = "AgentTorch simulation server with Model Context Protocol (MCP) integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "AgentTorch Team"}
]
dependencies = [
    # MCP dependencies
    "mcp[cli]>=0.8.0",
    # Web server components
    "fastapi>=0.95.1",
    "uvicorn>=0.22.0",
    "starlette>=0.27.0",
    "jinja2==3.1.2",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "websockets==11.0.3",
    # API client
    "anthropic>=0.5.0",
    # Data handling
    "pydantic>=2.0.0",
    "scipy>=1.10.1",
    "numpy==1.24.3",
    "pandas==2.1.0",
    "matplotlib==3.7.2",
    # Visualization
    "Pillow==10.0.0",
    "imageio==2.31.1",
    # PyTorch with CPU version (smaller image size)
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    # Network visualization - using simpler alternatives where possible
    "networkx==3.1",
    "geopandas==0.13.2",
    "osmnx==1.5.1",
    "contextily==1.3.0",
    # Utilities
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "omegaconf>=2.1.1",
    # AgentTorch from GitHub
    "agent_torch @ git+https://github.com/agenttorch/agenttorch.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_torch_mcp"]

[project.scripts]
agent-torch-mcp = "agent_torch_mcp.server:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
